--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -1,14 +1,29 @@
-﻿@using ApplicationCore.Entities
-@model List<Product> 
+﻿
+@model HomeViewModel
 @{
     ViewData["Title"] = "Home Page";
 }
 
 
-@foreach (var item in Model)
-{
-    <p>
-        <img src="~/uploads/products/@item.PictureUri"  height="50" alt="Alternate Text" />
-        @item.Price;
-    </p>
-}
+
+<h1>Products</h1>
+
+<div class="row">
+    @foreach (var item in Model.Products)
+    {
+
+        <div class="col-6 col-md-4 col-lg-3">
+            <div class="card mb-4">
+                <div class="mx-3 mt-3">
+                <img src="~/uploads/products/@item.PictureUri" class="card-img-top" alt="@item.Name">
+                </div>
+                <div class="card-body">
+                    <h5 class="product-title" title="@item.Name">@item.Name</h5>
+                    <p class="card-text">@item.PriceText</p>
+                    <a href="#" class="btn btn-block btn-primary">Contact Supplier</a>
+                </div>
+            </div>
+        </div>
+
+    }
+</div>
