--- a/src/Web/Views/Home/Index.cshtml
+++ b/src/Web/Views/Home/Index.cshtml
@@ -8,14 +8,27 @@
 
 <h1>Products</h1>
 
-<div class="row">
+<div class="card">
+    <form id="frmFilters" class="card-body form-inline p-2 bg-light">
+        <label>Category</label>
+        <select class="form-control ml-sm-2" asp-items="Model.Categories" asp-for="CategoryId">
+            <option value="">All</option>
+        </select>
+        <label class="ml-sm-3">Brand</label>
+        <select class=" form-control ml-sm-2 " asp-items="Model.Brands" asp-for="BrandId">
+            <option value="">All</option>
+        </select>
+    </form>
+</div>
+
+<div class="row mt-3">
     @foreach (var item in Model.Products)
     {
 
         <div class="col-6 col-md-4 col-lg-3">
             <div class="card mb-4">
                 <div class="mx-3 mt-3">
-                <img src="~/uploads/products/@item.PictureUri" class="card-img-top" alt="@item.Name">
+                    <img src="~/uploads/products/@item.PictureUri" class="card-img-top" alt="@item.Name">
                 </div>
                 <div class="card-body">
                     <h5 class="product-title" title="@item.Name">@item.Name</h5>
@@ -27,3 +40,17 @@
 
     }
 </div>
+
+@section Scripts{ 
+
+<script>
+    $("#frmFilters select").change(function () {
+        $("#frmFilters").submit();
+    });
+
+
+</script>
+}
+
+
+
